manifests/main/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nekkoarcc/demoproject-main
        volumeMounts:
        - name: php-data
          mountPath: /usr/share/nginx/html
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-conf
          subPath: default.conf
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      volumes:
      - name: php-data
        hostPath:
          path: /home/dev/DEMOPROJECT-Laravel-URL-Shortener
      - name: nginx-conf
        configMap:
          name: nginx-configmap
      nodeSelector:
        servicetype: main
