manifests/main/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host $host;
spec:
  rules:
  - host: my.shrt.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx
            port:
              number: 80
  - host: lnk.shrt
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: redirectnginx
            port:
              number: 80
    # - http:
    #     paths:
    #       - path: /{slug}
    #         pathType: ImplementationSpecific
    #         backend:
    #           service:
    #             name: redirectnginx
    #             port:
    #               number: 80
